# AMORE2Onl

./: .gitignore  .gitmodules  CMakeLists.txt
AMORE/AMORE/: amoreconsts.hh
AMOREAlgs/AMOREAlgs/: AMOREChunkFIFO.hh
AMOREAlgs/src/: AMOREChunkFIFO.cc
AMOREDAQ/: CMakeLists.txt
AMOREDAQ/AMOREDAQ/: AMOREDAQManager.hh
AMOREDAQ/src/: AMOREDAQManager.cc  AMOREDAQManager_tfunc.cc
AMOREHDF5/: CMakeLists.txt
AMOREHDF5/AMOREHDF5/: AMOREEDM.hh  H5AMOREEvent.hh  H5AMOREHit.hh  LinkDef.h
AMOREHDF5/src/: H5AMOREEvent.cc  H5AMOREHit.cc
AMOREHDF5/test/: CMakeLists.txt  test_amore_event.cc  test_amore_hit.cc
